--- a/style.css
+++ b/style.css
@@ -52,6 +52,45 @@ input[type='text'] {
   border-bottom-right-radius: 4px;
 }
 
+.meals {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  margin-top: 20px;
+}
+
+.meal {
+  cursor: pointer;
+  position: relative;
+  height: 180px;
+  width: 180px;
+  text-align: center;
+}
+
+.meal img {
+  width: 100%;
+  border: 4px solid #fff;
+  border-radius: 2px;
+}
+
+.meal-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  transition: 0.2s ease-in;
+}
+
+.meal:hover .meal-info {
+  opacity: 1;
+}
+
 @media(max-width: 800px) {}
 
 @media(max-width: 700px) {}
