--- a/style.css
+++ b/style.css
@@ -91,6 +91,51 @@ input[type='text'] {
   opacity: 1;
 }
 
+.single-meal {
+  margin: 20px auto;
+  width: 70%;
+}
+
+.single-meal img {
+  width: 300px;
+  margin: 15px;
+  border: 4px solid #fff;
+  border-radius: 2px;
+}
+
+.single-meal-info {
+  margin: 20px;
+  padding: 10px;
+  border: 2px dashed #e09850;
+  border-radius: 5px;
+}
+
+.single-meal p {
+  letter-spacing: 0.5px;
+  line-height: 1.5;
+}
+
+.single-meal ul {
+  list-style: none;
+}
+
+.single-meal h2 {
+  margin: 10px 0;
+}
+
+.single-meal ul li {
+  display: inline-block;
+  border: 1px solid #ededed;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #2d2013;
+  background-color: #fff;
+  padding: 5px;
+  margin: 0 5px 5px 0;
+
+}
+
 @media(max-width: 800px) {}
 
 @media(max-width: 700px) {}
